Version 3.8

* IMPROVEMENT: Added KSI_verifyDataHash.
* IMPROVEMENT: Custom meta-data sepparated from the low-level implementation. Adds padding automatically.

2016-04-18 release(3.8.1428)

* IMPROVEMENT: Removed SHA-224 support.
* IMPROVEMENT: Removed Unused function KSI_RDR_verifyEnd.
* IMPROVEMENT: PKI truststore initialization is performed on the need basis.
* IMPROVEMENT: Added signature verification according to policies.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Certificate constraints can be set and verified per publications file.
* IMPROVEMENT: Add preprocessor parseable version no.
* IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.
* BUGFIX: Invalid and misleading exception message on response publication time check.
* BUGFIX: Correcting memory leaks when using Windows Crypt32 library.

Version 3.8

* IMPROVEMENT: Added support for local aggregation.
* IMPROVEMENT: Functions KSI_Signature_create* are deprecated and KSI_Signature_sign will replace them.
* IMPROVEMENT: Added function KSI_Signature_appendAggregationChain.
* IMPROVEMENT: Added function KSI_AggregationHashChain_calculateShape.
* IMPROVEMENT: KSI_HashChain_aggregate and KSI_HashChain_aggregateCalendar no longer require not NULL output parameters.
* IMPROVEMENT: Added KSI_AggregationHashChain_aggregate function.
* BUGFIX: Correcting usage of isForward and isNonCritical flags in KSI_TlvTemplate_serializeObject and KSI_TlvTemplate_writeBytes. Added tests to cover this bug.
* IMPROVEMENT: KSI_LIST may contain NULL values.
* BUGFIX: Certificate and publication records are not mandatory for publications file.
* IMPROVEMENT: Integration tests configuration file error handling improved.
* IMPROVEMENT: Handling for reading server responses from tlv files.
* BUGFIX: Removed unused function.
* BUGFIX: Fixed macro redefinition issue.