@@ -652,6 +652,134 @@ static void TestInternalPolicy_FAIL_WithInvalidRfc3161(CuTest* tc) {
 #undef TEST_SIGNATURE_FILE
 }
 
+static void TestInternalPolicy_OK_MetaDataWithPadding(CuTest* tc) {
+#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-metadata-with-padding.ksig"
+	int res;
+	KSI_VerificationContext context;
+	KSI_PolicyVerificationResult *result = NULL;
+	KSI_RuleVerificationResult expected = {
+		KSI_VER_RES_OK,
+		KSI_VER_ERR_NONE,
+		"KSI_VerificationRule_DocumentHashDoesNotExist"
+	};
+	KSI_LOG_debug(ctx, "%s", __FUNCTION__);
+
+	KSI_ERR_clearErrors(ctx);
+
+	res = KSI_VerificationContext_init(&context, ctx);
+	CuAssert(tc, "Verification context creation failed", res == KSI_OK);
+
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &context.signature);
+	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && context.signature != NULL);
+
+	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_INTERNAL, &context, &result);
+	CuAssert(tc, "Policy verification failed", res == KSI_OK);
+	CuAssert(tc, "Unexpected verification result", ResultsMatch(&expected, &result->finalResult));
+	CuAssert(tc, "Unexpected verification property", SuccessfulProperty(&result->finalResult, KSI_VERIFY_AGGRCHAIN_INTERNALLY));
+
+	KSI_PolicyVerificationResult_free(result);
+	KSI_Signature_free(context.signature);
+	KSI_VerificationContext_clean(&context);
+#undef TEST_SIGNATURE_FILE
+}
+
+static void TestInternalPolicy_OK_MetaDataWithoutPadding(CuTest* tc) {
+#define TEST_SIGNATURE_FILE "resource/tlv/ok-sig-metadata-without-padding.ksig"
+	int res;
+	KSI_VerificationContext context;
+	KSI_PolicyVerificationResult *result = NULL;
+	KSI_RuleVerificationResult expected = {
+		KSI_VER_RES_OK,
+		KSI_VER_ERR_NONE,
+		"KSI_VerificationRule_DocumentHashDoesNotExist"
+	};
+	KSI_LOG_debug(ctx, "%s", __FUNCTION__);
+
+	KSI_ERR_clearErrors(ctx);
+
+	res = KSI_VerificationContext_init(&context, ctx);
+	CuAssert(tc, "Verification context creation failed", res == KSI_OK);
+
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &context.signature);
+	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && context.signature != NULL);
+
+	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_INTERNAL, &context, &result);
+	CuAssert(tc, "Policy verification failed", res == KSI_OK);
+	CuAssert(tc, "Unexpected verification result", ResultsMatch(&expected, &result->finalResult));
+	CuAssert(tc, "Unexpected verification property", SuccessfulProperty(&result->finalResult, KSI_VERIFY_AGGRCHAIN_INTERNALLY));
+
+	KSI_PolicyVerificationResult_free(result);
+	KSI_Signature_free(context.signature);
+	KSI_VerificationContext_clean(&context);
+#undef TEST_SIGNATURE_FILE
+}
+
+static void TestInternalPolicy_FAIL_WithInvalidMetaDataPadding(CuTest* tc) {
+#define TEST_SIGNATURE_FILE "resource/tlv/nok-sig-metadata-padding-flags-not-set.ksig"
+	int res;
+	KSI_VerificationContext context;
+	KSI_PolicyVerificationResult *result = NULL;
+	KSI_RuleVerificationResult expected = {
+		KSI_VER_RES_FAIL,
+		KSI_VER_ERR_INT_11,
+		"KSI_VerificationRule_AggregationChainMetaDataVerification"
+	};
+
+	KSI_LOG_debug(ctx, "%s", __FUNCTION__);
+
+	KSI_ERR_clearErrors(ctx);
+
+	res = KSI_VerificationContext_init(&context, ctx);
+	CuAssert(tc, "Verification context creation failed", res == KSI_OK);
+
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &context.signature);
+	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && context.signature != NULL);
+
+	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_INTERNAL, &context, &result);
+	CuAssert(tc, "Policy verification failed", res == KSI_OK);
+	CuAssert(tc, "Unexpected verification result", ResultsMatch(&expected, &result->finalResult));
+	CuAssert(tc, "Unexpected verification property", FailedProperty(&result->finalResult, KSI_VERIFY_AGGRCHAIN_INTERNALLY));
+
+	KSI_PolicyVerificationResult_free(result);
+	KSI_Signature_free(context.signature);
+	KSI_VerificationContext_clean(&context);
+
+#undef TEST_SIGNATURE_FILE
+}
+
+static void TestInternalPolicy_FAIL_WithoutMetaDataPadding(CuTest* tc) {
+#define TEST_SIGNATURE_FILE "resource/tlv/nok-sig-metadata-padding-missing.ksig"
+	int res;
+	KSI_VerificationContext context;
+	KSI_PolicyVerificationResult *result = NULL;
+	KSI_RuleVerificationResult expected = {
+		KSI_VER_RES_FAIL,
+		KSI_VER_ERR_INT_11,
+		"KSI_VerificationRule_AggregationChainMetaDataVerification"
+	};
+
+	KSI_LOG_debug(ctx, "%s", __FUNCTION__);
+
+	KSI_ERR_clearErrors(ctx);
+
+	res = KSI_VerificationContext_init(&context, ctx);
+	CuAssert(tc, "Verification context creation failed", res == KSI_OK);
+
+	res = KSI_Signature_fromFile(ctx, getFullResourcePath(TEST_SIGNATURE_FILE), &context.signature);
+	CuAssert(tc, "Unable to read signature from file.", res == KSI_OK && context.signature != NULL);
+
+	res = KSI_SignatureVerifier_verify(KSI_VERIFICATION_POLICY_INTERNAL, &context, &result);
+	CuAssert(tc, "Policy verification failed", res == KSI_OK);
+	CuAssert(tc, "Unexpected verification result", ResultsMatch(&expected, &result->finalResult));
+	CuAssert(tc, "Unexpected verification property", FailedProperty(&result->finalResult, KSI_VERIFY_AGGRCHAIN_INTERNALLY));
+
+	KSI_PolicyVerificationResult_free(result);
+	KSI_Signature_free(context.signature);
+	KSI_VerificationContext_clean(&context);
+
+#undef TEST_SIGNATURE_FILE
+}
+
 static void TestInternalPolicy_FAIL_WithInvalidAggregationChain(CuTest* tc) {
 #define TEST_SIGNATURE_FILE "resource/tlv/bad-aggregation-chain.ksig"
 	int res;
@@ -2834,6 +2962,10 @@ CuSuite* KSITest_Policy_getSuite(void) {
 	SUITE_ADD_TEST(suite, TestVerificationResult);
 	SUITE_ADD_TEST(suite, TestDuplicateResults);
 	SUITE_ADD_TEST(suite, TestInternalPolicy_FAIL_WithInvalidRfc3161);
+	SUITE_ADD_TEST(suite, TestInternalPolicy_OK_MetaDataWithPadding);
+	SUITE_ADD_TEST(suite, TestInternalPolicy_OK_MetaDataWithoutPadding);
+	SUITE_ADD_TEST(suite, TestInternalPolicy_FAIL_WithInvalidMetaDataPadding);
+	SUITE_ADD_TEST(suite, TestInternalPolicy_FAIL_WithoutMetaDataPadding);
 	SUITE_ADD_TEST(suite, TestInternalPolicy_FAIL_WithInvalidAggregationChain);
 	SUITE_ADD_TEST(suite, TestInternalPolicy_FAIL_WithInconsistentAggregationChainTime);
 	SUITE_ADD_TEST(suite, TestInternalPolicy_OK_WithoutCalendarHashChain);
